--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Ruang Siswa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <style>
+        .carousel-inner img {
+            height: 200px; 
+            object-fit: cover;
+        }
+        .overlay-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            border-radius: 20px;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            width: 80%;
+            max-width: 300px; 
+        }
+
+    </style>
+
 </head>
 <body>
     <ul class="nav nav-tabs">
@@ -20,11 +41,46 @@
         </li>
     </ul>
 
-    
 
+    <div id="carouselExampleAutoplaying" class="carousel slide carousel-custom" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/bio1.jpg" class="d-block w-100" alt="...">
+                <div class="overlay-text">
+                    <h5>Ruang Siswa</h5>
+                    <p>Web Belajar untuk SMP-SMA</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="assets/perpus.jpg" class="d-block w-100" alt="...">
+                <div class="overlay-text">
+                    <h5>Online</h5>
+                    <p>Kemudahan Akses Materi dan Soal</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="assets/ruang.jpg" class="d-block w-100" alt="...">
+                <div class="overlay-text">
+                    <h5>Soal HOTS</h5>
+                    <p>Menyediakan ragam soal HOTS dan terbaru.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div style="text-align:center; padding:50px">
+        <h3>Ruang Siswa</h3>
+        <p>Selamat datang di Ruang Siswa, platform inovatif untuk meningkatkan pengetahuan Anda 
+            secara online. Dengan fitur-fitur canggih seperti bank soal terbaru, modul pembelajaran 
+            interaktif, dan kuis real-time, kami memastikan setiap pengguna mendapatkan pengalaman 
+            belajar yang menyenangkan dan efektif. Nikmati akses mudah ke materi pelajaran yang 
+            komprehensif dari berbagai bidang seperti Matematika, Biologi, dan Kimia. Bergabunglah 
+            sekarang dan mulai perjalanan pendidikan Anda dengan Ruang Soal!</p>
+    </div>
+    
     <footer>
         <div class="container">
-            <p>&copy; 2024 Web Belajar. All Rights Reserved.</p>
+            <p>&copy; Ruang Siswa. All Rights Reserved.</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
