--- a/materi.html
+++ b/materi.html
@@ -51,7 +51,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Web Belajar. All Rights Reserved.</p>
+            <p>&copy; Ruang Siswa. All Rights Reserved.</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
